<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.autofarmbot.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_plantstatus"
        android:name="com.autofarmbot.ui.plantstatus.PlantstatusFragment"
        android:label="@string/title_plantstatus"
        tools:layout="@layout/fragment_plantstatus" />

    <fragment
        android:id="@+id/navigation_livefeed"
        android:name="com.autofarmbot.ui.livefeed.LivefeedFragment"
        android:label="@string/title_livefeed"
        tools:layout="@layout/fragment_livefeed" />
</navigation>